--- a/src/components/TechCard/style.css
+++ b/src/components/TechCard/style.css
@@ -33,3 +33,11 @@
     font-size: 14px;
   }
 }
+
+
+@media (max-width: 480px) {
+  .techCard div {
+    display: flex;
+    justify-content: center;
+  }
+}
